<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One Button Nap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enable_notification">Enable notification</string>
    <string name="notification_priority">Notification Priority</string>
    <string name="nap_time">Time of nap</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="start_nap">Start nap for %s minutes</string>
    <string name="settings_priority_default">0</string>
    <string name="take_nap">Take nap</string>
    <string name="enable_android_wear">Android Wear Notification</string>
    <string name="notification">Notification</string>
    <string name="l_settings">Android L settings</string>
    <string name="notification_visibility">Notification Visibility</string>
    <string name="settings_visibility_default">1</string>
    <string name="app_description">Application for quick starting nap</string>
    <string name="start_quick_nap">Start quick nap</string>

</resources>
