<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="nap_time"
        android:title="@string/nap_time" />

    <PreferenceCategory
        android:title="@string/notification" >

        <CheckBoxPreference
            android:key="enable_notification"
            android:title="@string/enable_notification" />

        <CheckBoxPreference
            android:key="enable_android_wear"
            android:dependency="enable_notification"
            android:title="@string/enable_android_wear"
            android:defaultValue="true"/>

        <ListPreference
            android:key="notification_priority"
            android:dependency="enable_notification"
            android:title="@string/notification_priority"
            android:dialogTitle="@string/notification_priority"
            android:entries="@array/settings_priority_entries"
            android:entryValues="@array/settings_priority_values"
            android:defaultValue="@string/settings_priority_default"/>

    </PreferenceCategory>

</PreferenceScreen>